--- a/package.json
+++ b/package.json
@@ -3,20 +3,18 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "deploy": "npm run build && gh-pages -d dist"
+    "preview": "vite preview"
   },
   "dependencies": {
-    "bootstrap": "^5.3.2",
-    "lucide-react": "^0.292.0",
+    "bootstrap": "^5.3.3",
+    "lucide-react": "^0.367.0",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.9.1",
+    "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.2.0",
-    "gh-pages": "^6.1.0",
-    "prettier": "^3.1.0",
-    "vite": "^5.0.0"
+    "@vitejs/plugin-react": "^4.2.1",
+    "prettier": "^3.2.5",
+    "vite": "^5.2.8"
   }
 }
